Style user interface and make it take in the prompt