@@ -1,6 +1,7 @@
 package tts;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
@@ -32,10 +33,17 @@ public class UserInterfaceController {
     @FXML
     private static void recipe(String dish) throws IOException {
         System.out.println("Recipe processing for: " + dish);
-        String content = new String(Files.readAllBytes(Paths.get("prompts/" + dish + ".txt")));
-        ChatGeneration.recipe = content;
-        ChatGeneration.clearMessages();
-        TextToSpeech.speak("Now we are cooking " + dish + ". Ask me how to start!");
+        String resourcePath = "/prompts/" + dish + ".txt";
+        try (InputStream is = UserInterfaceController.class.getResourceAsStream(resourcePath)) {
+            if (is == null) {
+                throw new IOException("Prompt file not found: " + resourcePath);
+            }
+            String content = new String(is.readAllBytes());
+            ChatGeneration.recipe = content;
+            ChatGeneration.clearMessages();
+            new Thread(() -> TextToSpeech.speak("Now we are cooking " + dish + ". Ask me how to start!")).start();
+        }
+        System.out.println("Recipe loaded: " + ChatGeneration.recipe);
     }
 
     @FXML
